# weiboloader

./: .gitignore  README.md  pyproject.toml
openspec/changes/archive/2026-02-25-fix-download-hang-timeout-retry/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-25-progress-display-and-download-reliability/: design.md  proposal.md
openspec/changes/archive/2026-02-25-weiboloader-initial-design/: design.md
openspec/changes/archive/2026-02-26-fix-ctrl-c-and-login-status/: design.md  proposal.md  tasks.md
openspec/changes/progress-display-and-download-reliability/: tasks.md
openspec/changes/rich-progress-ui/: tasks.md
openspec/changes/weiboloader-initial-design/: proposal.md  tasks.md
openspec/specs/authentication/: spec.md
openspec/specs/captcha-handling/: spec.md
openspec/specs/cli-interface/: spec.md
openspec/specs/download-reliability/: spec.md
openspec/specs/file-naming/: spec.md
openspec/specs/file-timestamps/: spec.md
openspec/specs/filtering-incremental/: spec.md
openspec/specs/rate-control/: spec.md
openspec/specs/resumable-download/: spec.md
openspec/specs/status-bar-display/: spec.md
tests/: test_adapter.py  test_captcha.py  test_cli.py  test_context.py  test_exceptions.py  test_integration.py  test_naming.py  test_nodeiterator.py  test_progress_ui.py  test_ratecontrol.py  test_structures.py  test_weiboloader.py
weiboloader/: __init__.py  __main__.py  _captcha.py  adapter.py  boundary.py  context.py  exceptions.py  naming.py  nodeiterator.py  progress.py  ratecontrol.py  structures.py  ui.py  weiboloader.py
(+25 files in other folders)
