[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weiboloader"
version = "0.1.0"
description = "A Weibo media downloader inspired by instaloader"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
# --load-cookies: load cookies from local browser (Chrome/Firefox/Edge)
browser = ["browser_cookie3>=0.16"]
# --visitor-cookies: auto-fetch visitor cookies; captcha auto-solve
# After install, run: playwright install chromium
captcha = ["playwright>=1.40"]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "freezegun>=1.2",
    "responses>=0.23",
]

[project.scripts]
weiboloader = "weiboloader.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
